--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -82,7 +82,7 @@
     font-feature-settings:
       'rlig' 1,
       'calt' 1;
-    word-break: break-all;
+    overflow-wrap: break-word;
   }
 }
 
